tests/invalid-semantics/57551_duplicate_toplevel_declaration/duplicate_toplevel_declaration.mag
-- Author: 57551, Eduardo Proença

const a : Int = 1
fun a (_) : Unit -> Unit = print(0)

fun main (_) : Unit -> Unit =
    print(a)